[gd_scene load_steps=15 format=3 uid="uid://ckgju87agli76"]

[ext_resource type="Script" uid="uid://q4754kfc6npl" path="res://scripts/player.gd" id="1_hqtel"]
[ext_resource type="Script" uid="uid://ctvs7cunvnd10" path="res://scripts/player_stats.gd" id="2_1jxqw"]
[ext_resource type="Environment" uid="uid://cyky3eujucem5" path="res://scenes/environment.tres" id="2_2hs0m"]
[ext_resource type="Script" uid="uid://dfpnth5k6p1u2" path="res://scripts/player_camera.gd" id="2_sweqy"]
[ext_resource type="Script" uid="uid://dxmbfb4qphdfj" path="res://scripts/player_movement.gd" id="3_2hs0m"]
[ext_resource type="Script" uid="uid://b6b20656cg47d" path="res://scripts/player_input.gd" id="4_1jxqw"]
[ext_resource type="Script" uid="uid://savfgqh610vg" path="res://scripts/player_interact.gd" id="5_1jxqw"]
[ext_resource type="PackedScene" uid="uid://oncjf8lbhw26" path="res://scenes/ingame_hud.tscn" id="8_dw050"]

[sub_resource type="Resource" id="Resource_dw050"]
script = ExtResource("2_1jxqw")
max_health = 10.0
max_stamina = 10.0
metadata/_custom_type_script = "uid://ctvs7cunvnd10"

[sub_resource type="Animation" id="Animation_i5arm"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_jka67"]
resource_name = "head_bob"
length = 0.5
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.25, 1, 0, -0.1, 0, 0.5, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wc5p8"]
_data = {
&"RESET": SubResource("Animation_i5arm"),
&"head_bob": SubResource("Animation_jka67")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2hs0m"]
height = 1.40039
radius = 0.280762

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a202f"]
radius = 0.3
height = 1.7

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_hqtel")
playerStats = SubResource("Resource_dw050")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38356, 0)

[node name="Player Camera" type="Camera3D" parent="Head" node_paths=PackedStringArray("character", "head", "player_movement")]
environment = ExtResource("2_2hs0m")
current = true
fov = 60.0
near = 0.001
far = 100.0
script = ExtResource("2_sweqy")
character = NodePath("../..")
head = NodePath("..")
player_movement = NodePath("../../PlayerMovement")
head_bob_speed = 0.24

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Player Camera"]
libraries = {
&"": SubResource("AnimationLibrary_wc5p8")
}

[node name="Interact Area" type="Area3D" parent="Head/Player Camera"]
collision_layer = 16
collision_mask = 32
script = ExtResource("5_1jxqw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Player Camera/Interact Area"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1.11873)
shape = SubResource("CylinderShape3D_2hs0m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_a202f")

[node name="PlayerMovement" type="Node" parent="." node_paths=PackedStringArray("character3d", "player_input")]
script = ExtResource("3_2hs0m")
character3d = NodePath("..")
player_input = NodePath("../PlayerInput")
JUMPING_VELOCITY = 3.0

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("4_1jxqw")

[node name="HUD" parent="." node_paths=PackedStringArray("player") instance=ExtResource("8_dw050")]
player = NodePath("..")

[connection signal="player_state_changed" from="." to="PlayerMovement" method="_on_player_player_state_changed"]
[connection signal="area_entered" from="Head/Player Camera/Interact Area" to="Head/Player Camera/Interact Area" method="_on_area_entered"]
[connection signal="area_exited" from="Head/Player Camera/Interact Area" to="Head/Player Camera/Interact Area" method="_on_area_exited"]
